# routes/movies.js
@@ -1,13 +1,13 @@
-// routes/movies.js
-
 const express = require('express');
 const router = express.Router();
 const moviesController = require('../controllers/movies');
+const { requiresAuth } = require('express-openid-connect');
+
 
 router.get('/', moviesController.getAll);
 router.get('/:id', moviesController.getSingle);
-router.post('/', moviesController.createMovie);
-router.put('/:id', moviesController.updateMovie);
-router.delete('/:id', moviesController.deleteMovie);
+router.post('/', requiresAuth(), moviesController.createMovie);
+router.put('/:id', requiresAuth(), moviesController.updateMovie);
+router.delete('/:id', requiresAuth(), moviesController.deleteMovie);
 
 module.exports = router;
