# routes/swagger.js
@@ -1,9 +1,7 @@
-// routes/swagger.js
-
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
+const swaggerDocumnet= require('../swagger.json');
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get('/api-docs', swaggerUi.setup(swaggerDocumnet));
 
 module.exports = router;
